# kanban-physics-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE_GUIDE.md  examples_real_data.py  pyproject.toml
data/: example_inventory.csv
social_physics_engine/: generate_data.py
