[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanban-physics-engine"
version = "2.1.0"
authors = [
  { name="Bolt AI Optimization" },
]
description = "A production-ready engine for analyzing real inventory data using Six Sigma Kanban methodology"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/Purmamarca/kanban-physics-engine"
"Bug Tracker" = "https://github.com/Purmamarca/kanban-physics-engine/issues"
